manifests/cheese/ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: stilton.cheese.apps.blah.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.cheese.apps.blah.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.cheese.apps.blah.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
  tls:
  - secretName: cheese-host-cert
    hosts:
    - stilton.cheese.apps.blah.cloud
    - cheddar.cheese.apps.blah.cloud
    - wensleydale.cheese.apps.blah.cloud
