manifests/cheese/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheeses
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-live
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: cheese.apps.blah.cloud
    http:
      paths:
      - path: /stilton
        backend:
          service:
            name: stilton
            port:
              name: http
        pathType: ImplementationSpecific
      - path: /cheddar
        backend:
          service:
            name: cheddar
            port:
              name: http
        pathType: ImplementationSpecific
      - path: /wensleydale
        backend:
          service:
            name: wensleydale
            port:
              name: http
        pathType: ImplementationSpecific
  tls:
  - secretName: cheese-path-cert
    hosts:
    - cheese.apps.blah.cloud
